adding the backgroudn overlay options

--- a/src/slider/editor.scss
+++ b/src/slider/editor.scss
@@ -4,3 +4,11 @@
 .slide-inner{
 	transform: none;
 }
+.slide-inner {
+    padding: 50px 50px;
+}
+.wp-block-cgb-slide{
+	position: relative;
+	padding: 15px 10px;
+
+}
