--- a/src/slider/style.scss
+++ b/src/slider/style.scss
@@ -1,25 +1,66 @@
 .wp-block-cgb-slide {
-	padding: 15px 10px;
 	width: 100%;
-	height: 50vh;
 }
-.flickity-prev-next-button.next {
+.arrow-outside .flickity-prev-next-button.next {
     right: -60px;
     background: none;
     outline-width: 0;
 }
-.flickity-prev-next-button.previous{
+.arrow-outside .flickity-prev-next-button.previous{
 	left: -60px;
     background: none;
     outline-width: 0;
 }
 
 .slide-inner {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+	padding:35vh 50px;
+	position: relative;
+	overflow: hidden;
 }
 
 .entry-content h1, .entry-content h2, .entry-content h3{
 	margin:25px 0 !important;
+}
+
+.overlay {
+	position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    transform: skewX(-45deg) translate(50%, 0px);
+}
+
+.slide-content{
+	position: relative;
+	h2{
+		font-size: 3.5em;
+		position: relative;
+		display: inline-block;
+	}
+	h2::after{
+		content: '';
+		position: absolute;
+		width: 75%;
+		height: 5px;
+		background: #e4003a;
+		right: 0;
+		bottom: -15px;
+	}
+	p{
+		font-size: 2em;
+	}
+
+}
+.flickity-button{
+	color:#fff;
+	background:transparent;
+}
+.flickity-page-dots{
+    .dot{
+		background: #0069b4;
+	}
+	.dot.is-selected{
+		background: #e4003a;
+	}
 }
