--- a/src/slider/style.scss
+++ b/src/slider/style.scss
@@ -13,7 +13,7 @@
 }
 
 .slide-inner {
-	padding:35vh 50px;
+	padding:35vh 100px;
 	position: relative;
 	overflow: hidden;
 }
@@ -25,9 +25,9 @@
 .overlay {
 	position: absolute;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 105px);
     right: 0;
-    top: 0;
+    bottom: 0;
     transform: skewX(-45deg) translate(50%, 0px);
 }
 
@@ -41,11 +41,11 @@
 	h2::after{
 		content: '';
 		position: absolute;
-		width: 75%;
-		height: 5px;
+		width: 100%;
+		height: 3px;
 		background: #e4003a;
 		right: 0;
-		bottom: -15px;
+		bottom: -10px;
 	}
 	p{
 		font-size: 2em;
